# co2-canary

./: .envrc  Cargo.toml  README.md  co2-sensor.kicad_pcb  co2-sensor.kicad_pro  co2-sensor.kicad_sch  flake.nix  symbols.kicad_sym  toolchain.toml
.cargo/: config.toml
firmware/: .gitignore  Cargo.toml
firmware/.cargo/: config.toml
firmware/src/: display.rs  history.rs  main.rs  sunrise.rs
footprints.pretty/: SW-SMD_TS24CA.kicad_mod  TS24CA.kicad_mod
hardware/: .gitignore  co2-sensor.kicad_pcb  co2-sensor.kicad_pro  co2-sensor.kicad_sch
hardware/footprints.pretty/: ESP32-C6-MINI-1-N4.kicad_mod  Senseair_Sunrise.kicad_mod
hardware/lib/sunrise/: 006-0-0002.kicad_sym  XDCR_006-0-0002.kicad_mod
lib/esp32-c6/: XCVR_ESP32-C6-MINI-1-N4.kicad_mod
src/: display.rs  history.rs  main.rs  sunrise.rs
