[package]
name = "esp-hal-blinky"
version = "0.1.0"
authors = ["blinry <mail@blinry.org>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp32-hal = { version = "0.18.0", features = ["eh1"] }
esp-backtrace = { version = "0.10.0", features = ["esp32", "panic-handler", "exception-handler", "print-uart"] }
esp-println = { version = "0.8.0", features = ["esp32"] }
epd-waveshare = { git = "https://github.com/caemor/epd-waveshare" }
embedded-graphics = "0.8.0"
heapless = "0.8.0"
embedded-hal-bus = "0.1.0"
u8g2-fonts = "0.4.0"
embedded-hal = "1.0.0"

[features]
default = ["esp32-hal/xtal-40mhz"]
