[package]
name = "co2-sensor"
version = "0.1.0"
authors = ["blinry <mail@blinry.org>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-hal = { version = "0.22", features = ["esp32c6"] }
esp-backtrace = { version = "0.14.0", features = [
    "println",
    "esp32c6",
    "panic-handler",
    "exception-handler",
] }
esp-println = { version = "0.12.0", features = ["esp32c6"] }
epd-waveshare = { git = "https://github.com/caemor/epd-waveshare" }
embedded-graphics = "0.8.0"
heapless = "0.8.0"
embedded-hal-bus = "0.2.0"
u8g2-fonts = "0.4.0"
embedded-hal = "1.0.0"
itertools = { version = "0.13.0", default-features = false }
max17048 = { git = "https://github.com/MabezDev/max17048", rev = "refs/pull/1/head" }

#[features]
#default = ["esp-hal/xtal-40mhz"]

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
